--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -1,44 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/grey"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey"
-    android:orientation="vertical"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView"
+<!--        <androidx.appcompat.widget.Toolbar-->
+<!--            android:id="@+id/toolbar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="?attr/colorPrimary"-->
+<!--            android:minHeight="?attr/actionBarSize"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            android:elevation="4dp"-->
+<!--            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/toolbar_title"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:fontFamily="@font/abril_fatface"-->
+<!--                    android:text="График цены"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:textSize="20sp"-->
+<!--                    android:textStyle="bold"-->
+<!--                    tools:layout_editor_absoluteX="16dp"-->
+<!--                    tools:layout_editor_absoluteY="14dp"-->
+<!--                    tools:text="График цены" />-->
+<!--        </androidx.appcompat.widget.Toolbar>-->
+
+        <LinearLayout
+            android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/abril_fatface"
-            android:text="@string/header"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:orientation="vertical"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/chart"
-            android:layout_width="match_parent"
-            android:layout_height="450dp"
-            android:layout_marginTop="10dp"
-            android:backgroundTint="@color/grey"/>
+                <com.github.mikephil.charting.charts.LineChart
+                    android:id="@+id/chart"
+                    android:layout_width="match_parent"
+                    android:layout_height="450dp"
+                    android:layout_marginTop="10dp"
+                    android:backgroundTint="@color/grey">
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/abril_fatface"
-            android:text="@string/subheader"
-            android:textSize="16sp" />
+                </com.github.mikephil.charting.charts.LineChart>
+
+                <TextView
+                    android:id="@+id/textViewInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/abril_fatface"
+                    android:text="@string/subheader"
+                    android:textColor="@color/material_dynamic_neutral50"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/textViewMaxPrice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/abril_fatface"
+                    android:text="@string/max_value"
+                    android:textColor="@color/material_dynamic_neutral50"
+                    android:textSize="16sp"
+                    tools:text="Максимальная цена: 100" />
+
+                <TextView
+                    android:id="@+id/textViewMinPrice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/abril_fatface"
+                    android:text="@string/min_value"
+                    android:textColor="@color/material_dynamic_neutral50"
+                    android:textSize="16sp"
+                    tools:text="Минимальная цена: 10" />
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/draw_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:backgroundTint="#00b784"
             android:insetLeft="4dp"
             android:insetTop="6dp"
@@ -47,47 +103,10 @@
             android:text="@string/draw_button"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            app:cornerRadius="12dp" />
+            app:cornerRadius="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+            tools:ignore="VisualLintButtonSize"
+            tools:layout_editor_absoluteX="16dp" />
 
-        <Button
-            android:id="@+id/btnReturn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:backgroundTint="@color/green"
-            android:insetLeft="4dp"
-            android:insetTop="6dp"
-            android:insetRight="4dp"
-            android:insetBottom="6dp"
-            android:text="@string/Back"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            app:cornerRadius="12dp" />
-
-</LinearLayout>
-
-    <!--<?xml version="1.0" encoding="utf-8"?>-->
-    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--    android:layout_width="match_parent"-->
-    <!--    android:layout_height="match_parent"-->
-    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-    <!--    android:paddingLeft="16dp"-->
-    <!--    android:paddingRight="16dp"-->
-    <!--    android:orientation="vertical"-->
-    <!--    android:background="#fce4d9">-->
-
-    <!--        <com.github.mikephil.charting.charts.LineChart-->
-    <!--            android:id="@+id/chart"-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="350dp"-->
-    <!--            android:layout_marginTop="40dp" />-->
-
-    <!--&lt;!&ndash;        <Button&ndash;&gt;-->
-    <!--&lt;!&ndash;            android:id="@+id/button_draw"&ndash;&gt;-->
-    <!--&lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
-    <!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
-
-
-    <!--</LinearLayout>-->
-
+</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
