--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -1,40 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aapt="http://schemas.android.com/aapt"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/grey"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_marginTop="10dp"
+    android:background="@color/white">
 
-<!--        <androidx.appcompat.widget.Toolbar-->
-<!--            android:id="@+id/toolbar"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:background="?attr/colorPrimary"-->
-<!--            android:minHeight="?attr/actionBarSize"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            android:elevation="4dp"-->
-<!--            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">-->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-<!--                <TextView-->
-<!--                    android:id="@+id/toolbar_title"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:fontFamily="@font/abril_fatface"-->
-<!--                    android:text="График цены"-->
-<!--                    android:textColor="@color/white"-->
-<!--                    android:textSize="20sp"-->
-<!--                    android:textStyle="bold"-->
-<!--                    tools:layout_editor_absoluteX="16dp"-->
-<!--                    tools:layout_editor_absoluteY="14dp"-->
-<!--                    tools:text="График цены" />-->
-<!--        </androidx.appcompat.widget.Toolbar>-->
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/chart"
+            android:layout_width="match_parent"
+            android:layout_height="450dp"
+            android:backgroundTint="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
             android:id="@+id/linearLayout2"
@@ -45,48 +31,36 @@
             android:paddingRight="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/chart">
 
-                <com.github.mikephil.charting.charts.LineChart
-                    android:id="@+id/chart"
-                    android:layout_width="match_parent"
-                    android:layout_height="450dp"
-                    android:layout_marginTop="10dp"
-                    android:backgroundTint="@color/grey">
+            <TextView
+                android:id="@+id/textViewInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/abril_fatface"
+                android:text="@string/subheader"
+                android:textSize="16sp" />
 
-                </com.github.mikephil.charting.charts.LineChart>
+            <TextView
+                android:id="@+id/textViewMaxPrice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/abril_fatface"
+                android:text="Максимальна цена:"
+                android:textColor="@color/material_dynamic_neutral50"
+                android:textSize="16sp" />
 
-                <TextView
-                    android:id="@+id/textViewInfo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:fontFamily="@font/abril_fatface"
-                    android:text="@string/subheader"
-                    android:textColor="@color/material_dynamic_neutral50"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/textViewMaxPrice"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:fontFamily="@font/abril_fatface"
-                    android:text="@string/max_value"
-                    android:textColor="@color/material_dynamic_neutral50"
-                    android:textSize="16sp"
-                    tools:text="Максимальная цена: 100" />
-
-                <TextView
-                    android:id="@+id/textViewMinPrice"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:fontFamily="@font/abril_fatface"
-                    android:text="@string/min_value"
-                    android:textColor="@color/material_dynamic_neutral50"
-                    android:textSize="16sp"
-                    tools:text="Минимальная цена: 10" />
+            <TextView
+                android:id="@+id/textViewMinPrice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/abril_fatface"
+                android:text="Минимальная цена: "
+                android:textColor="@color/material_dynamic_neutral50"
+                android:textSize="16sp" />
 
         </LinearLayout>
 
@@ -95,7 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:backgroundTint="#00b784"
+            android:backgroundTint="@color/blue"
             android:insetLeft="4dp"
             android:insetTop="6dp"
             android:insetRight="4dp"
@@ -104,9 +78,6 @@
             android:textAllCaps="false"
             android:textColor="@color/white"
             app:cornerRadius="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-            tools:ignore="VisualLintButtonSize"
-            tools:layout_editor_absoluteX="16dp" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
