--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.MyApplication" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/green</item>
+        <item name="colorPrimary">@color/blue</item>
 <!--        <item name="colorPrimaryVariant">@color/green</item>-->
 <!--        <item name="android:textColorPrimary">@color/black</item>-->
 <!--        &lt;!&ndash; Secondary brand color. &ndash;&gt;-->
